--- a/package.json
+++ b/package.json
@@ -1,60 +1,8 @@
 {
-  "name": "@unstablestudios/react-kbd-shortcuts",
-  "version": "1.0.0",
-  "type": "module",
-  "description": "React + Tailwind-friendly component library for rendering keyboard shortcut UI",
-  "main": "dist/index.js",
-  "module": "dist/index.esm.js",
-  "types": "dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
-  "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "test": "jest",
-    "typecheck": "tsc --noEmit",
-    "lint": "eslint src --ext .ts,.tsx",
-    "prepublishOnly": "npm run build"
-  },
-  "keywords": [
-    "react",
-    "keyboard",
-    "shortcuts",
-    "tailwind",
-    "ui",
-    "components"
-  ],
-  "author": "Unstable Studios",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/unstable-studios/react-kbd-shortcuts.git"
-  },
+  "name": "react-kbd-shortcuts",
+  "version": "0.1.0",
+  "main": "src/index.js",
   "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
-  },
-  "devDependencies": {
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-typescript": "^11.1.5",
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^29.7.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "rollup": "^4.7.0",
-    "rollup-plugin-dts": "^6.1.0",
-    "tslib": "^2.6.2",
-    "typescript": "^5.3.3"
-  },
-  "publishConfig": {
-    "access": "public"
+    "react": "^19.0.0"
   }
 }
