--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,57 @@
-node_modules
+# Dependencies
+node_modules/
+.pnpm-store/
+
+# Lock files from other package managers (we use pnpm-lock.yaml)
+package-lock.json
+yarn.lock
+
+# Build outputs
+dist/
+dist-ssr/
+build/
+*.tsbuildinfo
+
+# Environment files
+.env
+.env.local
+.env.*.local
+*.local
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+.DS_Store
+
+# OS files
+Thumbs.db
+
+# Testing
+coverage/
+.nyc_output/
+
+# Temporary files
+*.tmp
+.cache/
+.turbo/
+
+# Debug
+*.cpuprofile
+*.heapsnapshot
+.vscode/launch.json
