--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 node_modules/
 .pnpm-store/
 
-# Lock files from other package managers (we use pnpm-lock.yaml)
+# Lock files (ignore all lockfiles per request)
+pnpm-lock.yaml
 package-lock.json
 yarn.lock
 
