--- a/examples/sandbox/package.json
+++ b/examples/sandbox/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.16",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-kbd-shortcuts": "workspace:*"
