--- a/examples/sandbox/package.json
+++ b/examples/sandbox/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.16",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "react-kbd-shortcuts": "workspace:*"
   },
   "devDependencies": {
