--- a/packages/react-kbd-shortcuts/package.json
+++ b/packages/react-kbd-shortcuts/package.json
@@ -42,14 +42,23 @@
     "dev": "rollup -c -w",
     "build": "rollup -c",
     "build:watch": "rollup -c -w",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
     "lint": "eslint src --ext .js,.jsx"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^29.0.0",
     "@rollup/plugin-node-resolve": "^16.0.3",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
     "@types/react": "^19.2.2",
+    "happy-dom": "^20.0.10",
+    "jsdom": "^27.1.0",
     "rollup": "^4.52.5",
-    "rollup-plugin-esbuild": "^6.2.1"
+    "rollup-plugin-esbuild": "^6.2.1",
+    "vitest": "^4.0.6"
   },
   "exports": {
     ".": {
