--- a/packages/react-kbd-shortcuts/package.json
+++ b/packages/react-kbd-shortcuts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-kbd-shortcuts",
-  "version": "0.1.5",
+  "version": "0.2.0",
   "description": "A headless React library for parsing and rendering keyboard shortcuts from natural language input",
   "type": "module",
   "main": "dist/index.js",
@@ -25,7 +25,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/unstable-studios/react-kbd-shortcuts.git",
+    "url": "git+https://github.com/unstable-studios/react-kbd-shortcuts.git",
     "directory": "packages/react-kbd-shortcuts"
   },
   "bugs": {
