feat: add OS-aware parsing, render props, user-friendly strings + automated release setup
- Add OS-specific key mappings for Mac/Windows/Linux
- Implement user-friendly KEY_STRINGS alongside KEY_SYMBOLS
- Add render prop support to Key component
- Add standard HTML props support to both components
- Complete TypeScript definitions with SupportedOS type
- Comprehensive test coverage (91 tests passing)
- Setup changesets for automated releases
- Updated README with full API documentation

--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "dev:sandbox": "pnpm --filter react-kbd-shortcuts-sandbox dev",
     "build": "pnpm -r build",
     "lint": "pnpm -r lint",
-    "clean": "git clean -xfd && git reset --hard"
+    "clean": "git clean -xfd && git reset --hard",
+    "changeset": "changeset",
+    "changeset:version": "changeset version",
+    "changeset:publish": "pnpm build && changeset publish",
+    "release": "pnpm changeset:version && pnpm changeset:publish"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.29.7",
     "tailwindcss": "^4.1.16"
   }
 }
