--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,16 +24,12 @@ jobs:
         with:
           node-version: "20"
           registry-url: "https://registry.npmjs.org"
-          cache: pnpm
 
-      - name: Install Dependencies
-        run: pnpm install --frozen-lockfile
-
-      - name: Run Tests
-        run: pnpm --filter react-kbd-shortcuts test
+      - name: Update npm to latest
+        run: npm install -g npm@latest
 
       - name: Build Library
-        run: pnpm --filter react-kbd-shortcuts build
+        run: npm run build --if-present
 
       - name: Publish to npm
         working-directory: packages/react-kbd-shortcuts
