--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "dev:lib": "pnpm --filter react-kbd-shortcuts build:watch",
     "dev:sandbox": "pnpm --filter react-kbd-shortcuts-sandbox dev",
     "build": "pnpm -r build",
+    "test": "pnpm --filter react-kbd-shortcuts test",
+    "test:watch": "pnpm --filter react-kbd-shortcuts test:watch",
+    "test:ui": "pnpm --filter react-kbd-shortcuts test:ui",
+    "test:coverage": "pnpm --filter react-kbd-shortcuts test:coverage",
     "lint": "pnpm -r lint",
     "clean": "git clean -xfd && git reset --hard"
   },
