--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,12 +24,19 @@ jobs:
         with:
           node-version: "20"
           registry-url: "https://registry.npmjs.org"
+          cache: pnpm
 
       - name: Update npm to latest
         run: npm install -g npm@latest
 
+      - name: Install Dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Run Tests
+        run: pnpm --filter react-kbd-shortcuts test
+
       - name: Build Library
-        run: npm run build --if-present
+        run: pnpm --filter react-kbd-shortcuts build
 
       - name: Publish to npm
         working-directory: packages/react-kbd-shortcuts
