--- a/package.json
+++ b/package.json
@@ -11,13 +11,10 @@
     "test:ui": "pnpm --filter react-kbd-shortcuts test:ui",
     "test:coverage": "pnpm --filter react-kbd-shortcuts test:coverage",
     "lint": "pnpm -r lint",
-    "clean": "git clean -xfd && git reset --hard",
-    "version:patch": "cd packages/react-kbd-shortcuts && npm version patch && cd ../.. && git push --follow-tags",
-    "version:minor": "cd packages/react-kbd-shortcuts && npm version minor && cd ../.. && git push --follow-tags",
-    "version:major": "cd packages/react-kbd-shortcuts && npm version major && cd ../.. && git push --follow-tags"
+    "clean": "git clean -xfd && git reset --hard"
   },
   "devDependencies": {
     "tailwindcss": "^4.1.16"
   },
-  "version": "0.1.0"
+  "version": "0.1.1"
 }
