--- a/examples/sandbox/package.json
+++ b/examples/sandbox/package.json
@@ -14,7 +14,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
-    "react-kbd-shortcuts": "workspace:*"
+    "react-kbd-shortcuts": "file:../.."
   },
   "devDependencies": {
     "@eslint/js": "^9.39.0",
