--- a/package.json
+++ b/package.json
@@ -1,21 +1,69 @@
 {
-  "name": "react-kbd-shortcuts-monorepo",
-  "private": true,
+  "name": "react-kbd-shortcuts",
+  "version": "0.4.2",
+  "description": "A headless React library for parsing and rendering keyboard shortcuts from natural language input",
+  "type": "module",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "index.d.ts",
+  "files": [
+    "dist",
+    "index.d.ts",
+    "README.md"
+  ],
+  "sideEffects": false,
+  "keywords": [
+    "react",
+    "keyboard",
+    "shortcuts",
+    "hotkeys",
+    "keybindings",
+    "kbd",
+    "headless",
+    "accessibility",
+    "ui"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/unstable-studios/react-kbd-shortcuts.git"
+  },
+  "bugs": {
+    "url": "https://github.com/unstable-studios/react-kbd-shortcuts/issues"
+  },
+  "homepage": "https://github.com/unstable-studios/react-kbd-shortcuts#readme",
+  "license": "MIT",
+  "author": "unstable-studios",
+  "peerDependencies": {
+    "react": ">=19",
+    "react-dom": ">=19"
+  },
   "scripts": {
-    "dev": "pnpm --parallel --filter \"react-kbd-shortcuts\" --filter \"react-kbd-shortcuts-sandbox\" run dev",
-    "dev:lib": "pnpm --filter react-kbd-shortcuts build:watch",
-    "dev:sandbox": "pnpm --filter react-kbd-shortcuts-sandbox dev",
-    "build": "pnpm -r build",
-    "test": "pnpm --filter react-kbd-shortcuts test",
-    "test:watch": "pnpm --filter react-kbd-shortcuts test:watch",
-    "test:ui": "pnpm --filter react-kbd-shortcuts test:ui",
-    "test:coverage": "pnpm --filter react-kbd-shortcuts test:coverage",
-    "lint": "pnpm -r lint",
-    "clean": "git clean -xfd && git reset --hard",
-    "version": "pnpm -F react-kbd-shortcuts exec pnpm pkg set version=$npm_package_version"
+    "dev": "rollup -c -w",
+    "build": "rollup -c",
+    "build:watch": "rollup -c -w",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
+    "lint": "eslint src --ext .js,.jsx"
   },
   "devDependencies": {
-    "tailwindcss": "^4.1.16"
+    "@rollup/plugin-commonjs": "^29.0.0",
+    "@rollup/plugin-node-resolve": "^16.0.3",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@types/react": "^19.2.2",
+    "happy-dom": "^20.0.10",
+    "jsdom": "^27.1.0",
+    "rollup": "^4.52.5",
+    "rollup-plugin-esbuild": "^6.2.1",
+    "vitest": "^4.0.6"
   },
-  "version": "0.4.2"
+  "exports": {
+    ".": {
+      "types": "./index.d.ts",
+      "import": "./dist/index.js",
+      "default": "./dist/index.js"
+    }
+  }
 }
